Add Redis support: caching rankings and highlights calls